syntax = "proto3";

package handlers.api;

message DeleteSessionRequest {
  string session_id = 1;
}

message DeleteSessionResponse {
  bool status = 1;
}

service DeleteSession {
  rpc DeleteSession (DeleteSessionRequest) returns (DeleteSessionResponse);
}
